--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
    <title>jQuery Practice</title>
    <link rel="stylesheet" type="text/css" href="mystyle.css">
    <!-- Add the link to the jQuery library below using the script tag -->
-   
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  	<script src="myScript.js"></script>
    <!-- Add the link to your jQuery file below using the script tag -->
    
  </head>
