--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <link rel="stylesheet" type="text/css" href="mystyle.css">
    <!-- Add the link to the jQuery library below using the script tag -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="myScript.js"></script>
+  <script src="jscode.js"></script>
    <!-- Add the link to your jQuery file below using the script tag -->
    
  </head>
