--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
  </head>
  <body>
    <h1>This page demonstrates some of what we can do with jQuery.</h1>
-   <p>
+   <p class="1">
      This is the first paragraph.
    </p>
-   <p>
+   <p class="2" >
      This is the second paragraph.
    </p>
-   <p>
+   <p class="3">
      This is the third paragraph.
    </p>
-   <p>
+   <p class="4">
      This is the fourth paragraph.
    </p>
    <img src="bear.jpg" alt="Teddy Bear">
